@@ -135,6 +135,10 @@ Changelog
 - Fix javascript order in ExtJS profile.
   [jone]
 
+- ExtJS: Remove overriding sortable flag with grid state. The column
+  definition should be used always.
+  [jone]
+
 - Delegate pagination to batching to table if a table exists.
   This allows faster reload when using ExtJS tables.
   [jone]
